Fixing the visibility of the thanks.html content.

--- a/dev-labs-27-9/assets/css/style-thanks.css
+++ b/dev-labs-27-9/assets/css/style-thanks.css
@@ -11,8 +11,7 @@ a {
     color: #73BDD7;
 }
 
-@media screen and (min-width: 1201px){
-    main{
-            display: none;
-        }
+main{
+    opacity: 1;
+    display: inline-block;
 }
